fix examples cut off at bottom of screen

--- a/app/frontend/src/components/Example/Example.module.css
+++ b/app/frontend/src/components/Example/Example.module.css
@@ -94,3 +94,9 @@
         height: 5rem;
     }
 }
+
+@media (max-width: 720px) {
+    .examplesNavList {
+        padding-bottom: 30%;
+    }
+}
